hphp/test/zend/good/ext/gettext/tests/gettext_dcgettext-wrongparams.php
<?php
var_dump(dcgettext('a', 'b'));